--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "maplistings",
+  "name": "propertylistings",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -22,6 +22,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "homepage": "https://kcee403.github.io/propertylistings",
   "devDependencies": {
     "gh-pages": "^2.0.1",
     "react": "^16.5.2",
