--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-bootstrap": "^0.32.4",
     "react-dependent-script": "^1.1.0",
     "react-dom": "^16.6.0",
+    "react-router": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux-thunk": "^2.3.0"
   },
