--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-dependent-script": "^1.1.0",
     "react-dom": "^16.6.0",
     "react-router": "^4.3.1",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "redux-thunk": "^2.3.0"
   },
